--- a/src/thanks.html
+++ b/src/thanks.html
@@ -48,10 +48,11 @@
 					</div>
 				</div>
 			</aside>
-			<main class="mainpage">
-				<h1 class="main__h1">Potestas Canti</h1>
-				<h2 class="main__h2">oprawa muzyczna mszy</h2>
-
+			<main class="sidepage">
+				<div class="main__cover">
+				</div>
+				<h2>Dziękujemy za wiadomosc!</h2>
+				<p>Odezwiemy się w najbliższym czasie!</p>
 			</main>
 		</div>
 		<script src="code.js"></script>
