Sass upgrade, new descriptopm om about.html

--- a/src/about.html
+++ b/src/about.html
@@ -8,23 +8,25 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Arimo:400,700|Ledger" rel="stylesheet"> 
+		<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/img/favicon.ico" type="image/x-icon">
 	</head>
 	<body>
 		<div class="container">
-			<aside>
-				<div class="menu">
+			<aside class="nowrap">
+				<nav>
 					<a href="index.html"><h1>Potestas Canti</h1></a>
 					<ul>
 					<a href="index.html">
 						<li>Home</li>
 					</a>
 					<a href="about.html">
-						<li>O zespole</li>
+						<li class="nowrap">O zespole</li>
 					</a>
-					<a href="#">
+					<a href="video.html">
 						<li>Nagrania</li>
 					</a>
-					<a href="#">
+					<a href="music.html">
 						<li>Repertuar</li>
 					</a>
 					<a href="contact.html">
@@ -46,7 +48,7 @@
 							</a>
 						
 					</div>
-				</div>
+				</nav>
 			</aside>
 			<main class="sidepage">
 				<div class="main__cover">
@@ -69,8 +71,8 @@
 									Paulina Przychodzień-Witek
 								</h3>
 								<p class="caption">śpiew, gitara akustyczna</p>
-								<p>Śpiewam od namłodszych lat, głos szkolę od 8. roku życia. Jestem laureatką wielu konkursów. Śpiewam w Chórze Wydziału Fizyki UW jako sopran, jestem zaangażowana także w inne projekty muzyczne, gdzie piszę teksty i współtworzę muzykę.</p>
-								<p>Dysponuję 3-oktawową skalą głosu.</p>
+								<p>Śpiewa od namłodszych lat, od 8. roku życia uczy się i ćwiczy pod okiem nauczycieli. Laureatka wielu konkursów wokalnych. Śpiewała w chórach i zespołach. Zaangażowana także w inne projekty muzyczne, gdzie pisze teksty i tworzy muzykę. Ma doświadczenie nie tylko na scenie, ale też i w studiu.</p>
+								<p>Śpiewa sopranem i dysponuje 4-oktawową skalą głosu.</p>
 							</div>
 						</div>
 						<div class="main__aboutus__bandmate">
@@ -80,17 +82,17 @@
 									Wioleta Kowalczyk
 								</h3>
 								<p class="caption">flet poprzeczny, śpiew</p>
-								<p>Muzyka towarzyszy w moim życiu odkąd skończyłam 3 lata. Zaczynałam wokalnie, by potem jako sześciolatka rozpocząć naukę w szkole muzycznej I stopnia w klasie skrzypiec, a później fletu poprzecznego. W trakcie trwania edukacji muzycznej grałam w zespole smyczkowym oraz orkiestrze dętej. Uczestniczyłam rownież w lekcjach gry na fortepianie. Grałam i śpiewałam w scholi i chórach. Mam na swoim koncie również liczne koncerty muzyki rozrywkowej.</p>
+								<p>Absolwentka szkoły muzycznej 1 stopnia w klasie gry na skrzypcach oraz flecie poprzecznym. W dzieciństwie grała w zespole smyczkowym oraz w orkiestrze dętej. Na scenie jest od najmłodszych lat. W swym dorobku muzycznym posiada solowy album muzyki rozrywkowej. Temat ślubów jest jej szczególnie bliski, nie tylko pod postacią oprawy muzycznej Mszy, ale również dlatego, że przygotowuje pary do pierwszego tańca weselnego.</p>
 							</div>
 						</div>
 						<div class="main__aboutus__bandmate">
 							<img src="img/rose.jpg" alt="Placeholder"></img>
 							<div>
 								<h3>
-									Kamil Skrzypczak
+									Monika Gnatowicz
 								</h3>
 								<p class="caption">skrzypce</p>
-								<p>W wieku siedmiu lat rozpocząłem swój kontakt ze skrzypcami, który trwa do dziś. Praca mgr pt. "Wpływ wirtuozowskich technik Niccolò Paganiniego na polskich skrzypków Karola Lipińskiego i Apolinarego Kątskiego" zwieńczyła pewien etap w moim życiu, w następstwie czego zacząłem zgłębiać tajniki gry na tym instrumencie, co stało się moją pasją. Jestem absolwentem szkoły muzycznej II stopnia. Obecnie gram w orkiestrze kameralnej Warszawskiego Uniwersytetu Muzycznego.</p>
+								<p></p>
 							</div>
 						</div>
 					</div>
