--- a/src/video.html
+++ b/src/video.html
@@ -50,9 +50,17 @@
 					</div>
 				</nav>
 			</aside>
-			<main class="mainpage">
-				<h1>Potestas Canti</h1>
-				<h2>oprawa muzyczna mszy</h2>
+			<main class="sidepage">
+				<div class="main__cover">
+				</div>
+				<div class="main-iframe">
+					<span class="arrowBefore"></span>
+						<iframe width="100%" height="500px" src="https://www.youtube.com/embed/videoseries?list=PLWomASkCz34ZT2DZx8ugmqK2y1m8ZtcOR" frameborder="0" allowfullscreen></iframe>
+					<span class="arrowAfter"></span>
+
+				</div>
+
+
 			</main>
 		</div>
 		<script src="code.js"></script>
