--- a/src/contact.html
+++ b/src/contact.html
@@ -11,20 +11,20 @@
 	</head>
 	<body>
 		<div class="container">
-<aside>
-				<div class="menu">
+			<aside class="nowrap">
+				<nav>
 					<a href="index.html"><h1>Potestas Canti</h1></a>
 					<ul>
 					<a href="index.html">
 						<li>Home</li>
 					</a>
 					<a href="about.html">
-						<li>O zespole</li>
+						<li class="nowrap">O zespole</li>
 					</a>
-					<a href="#">
+					<a href="video.html">
 						<li>Nagrania</li>
 					</a>
-					<a href="#">
+					<a href="music.html">
 						<li>Repertuar</li>
 					</a>
 					<a href="contact.html">
@@ -46,7 +46,7 @@
 							</a>
 						
 					</div>
-				</div>
+				</nav>
 			</aside>
 			<main class="sidepage">
 				<div class="main__cover">
