--- a/src/about.html
+++ b/src/about.html
@@ -14,10 +14,14 @@
 	<body>
 		<div class="container">
 			<aside class="nowrap">
-				<nav>
+<nav>
 					<div class="head">
 						<a href="index.html"><h1>Potestas Canti</h1></a>
-						<button class="navbar-toggle"><span class="fa fa-bars"></span></button>
+						<button class="navbar-toggle">
+							<div></div>
+							<div></div>
+							<div></div>
+						</button>
 					</div>
 					<div class="dropdown">
 						<ul>
@@ -96,13 +100,12 @@
 									Monika Gnatowicz
 								</h3>
 								<p class="caption">skrzypce</p>
-								<p></p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque aperiam nobis neque quia sed repellat veritatis amet ad eum laborum, similique odio dolor voluptatum ipsum eveniet dolorum tempora maiores quod! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam dignissimos commodi, libero, aperiam, quo similique nulla voluptates quisquam eius corporis vitae provident, porro asperiores. Repellendus, veniam, porro. Temporibus, at, praesentium!</p>
 							</div>
 						</div>
 					</div>
 			</main>
 		</div>
-		<script src="https://use.fontawesome.com/2ba0d7112c.js"></script>
 		<script src="code.js"></script>
 	</body>
 </html>
