--- a/src/contact.html
+++ b/src/contact.html
@@ -12,19 +12,14 @@
 	<body>
 		<div class="container">
 			<aside class="nowrap">
-				<nav>
-					<a href="index.html"><h1>Potestas Canti</h1></a>
-					<button class="navbar-toggle"><span class="fa fa-bars"></span></button>
-					<div class="dropdown">
-						<ul>
-							<a href="index.html">
-								<li>Home</li>
-							</a>
-							<a href="about.html">
-					<nav>
+<nav>
 					<div class="head">
 						<a href="index.html"><h1>Potestas Canti</h1></a>
-						<button class="navbar-toggle"><span class="fa fa-bars"></span></button>
+						<button class="navbar-toggle">
+							<div></div>
+							<div></div>
+							<div></div>
+						</button>
 					</div>
 					<div class="dropdown">
 						<ul>
@@ -87,7 +82,6 @@
 				</form>
 			</main>
 		</div>
-		<script src="https://use.fontawesome.com/2ba0d7112c.js"></script>
 		<script src="code.js"></script>
 	</body>
 </html>
