--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,13 @@
 				<nav>
 					<div class="head">
 						<a href="index.html"><h1>Potestas Canti</h1></a>
-						<button class="navbar-toggle"><span class="fa fa-bars"></span></button>
+						<button class="navbar-toggle">
+							<div></div>
+							<div></div>
+							<div></div>
+						</button>
 					</div>
-					<div class="dropdown">
+					<div class="dropdown activate">
 						<ul>
 							<a href="index.html">
 								<li>Home</li>
@@ -59,7 +63,6 @@
 				<h2>oprawa muzyczna mszy</h2>
 			</main>
 		</div>
-		<script src="https://use.fontawesome.com/2ba0d7112c.js"></script>
 		<script src="code.js"></script>
 	</body>
 </html>
