--- a/src/music.html
+++ b/src/music.html
@@ -61,14 +61,40 @@
 			<main class="sidepage">
 				<div class="main__cover">
 				</div>
-				<h2>Nagrania naszych występów</h2>
-				<div class="main-iframe">
-					<span class="arrowBefore"></span>
-						<iframe width="100%" height="500px" src="https://www.youtube.com/embed/videoseries?list=PLWomASkCz34ZT2DZx8ugmqK2y1m8ZtcOR" frameborder="0" allowfullscreen></iframe>
-					<span class="arrowAfter"></span>
+				<h2>Repertuar</h2>
+				<div class="main__repertoire">
+					<p>Repertuar można skomponować z podanych niżej utworów oraz z pieśni na Wasze życzenie.</p>
+					<ul>
+						<li>Alleluja, alleluja (Psalm 148, Niech zabrzmi Panu chwała...)</li>
+						<li>Ave Maria (Caccini, właśc. Wawiłow)</li>
+						<li>Bo góry mogą ustąpić</li>
+						<li>Bo jak śmierć potężna jest miłość</li>
+						<li>Chwalę Ciebie Panie</li>
+						<li>Dotknij Panie moich oczu</li>
+						<li>Dotyk Ognia</li>
+						<li>Hallelujah po polsku</li>
+						<li>Hymn o miłości (Wspólnota Miłości Ukrzyżowanej)</li>
+						<li>Już teraz we mnie kwitną twe ogrody</li>
+						<li>Nic nie musisz mówić, nic</li>
+						<li>Niechaj zstąpi Duch Twój</li>
+						<li>Oczyszczenie</li>
+						<li>Ofiaruję Tobie Panie mój</li>
+						<li>Pachelbel Canon In D Mayor (na flet i skrzypce)</li>
+						<li>Panie proszę, przyjdź</li>
+						<li>Powietrzem moim jest</li>
+						<li>Przyjdź z Libanu, Oblubienico</li>
+						<li>Schowaj mnie</li>
+						<li>Ubi Caritas</li>
+						<li>Uwielbiajcie Pana</li>
+						<li>Takie jest prawo miłości</li>
+						<li>Twoja miłość jak ciepły deszcz (M. Szcześniak)</li>
+						<li>Ty tylko mnie poprowadź</li>
+						<li>W lekkim powiewe</li>
+						<li>Wszystkie moje troski i kłopoty</li>
+						<li>W Tobie jest światło</li>
+					</ul>
 
 				</div>
-
 
 			</main>
 		</div>
