--- a/src/thanks.html
+++ b/src/thanks.html
@@ -13,8 +13,14 @@
 		<div class="container">
 			<aside class="nowrap">
 				<nav>
-					<a href="index.html"><h1>Potestas Canti</h1></a>
-					<button class="navbar-toggle"><span class="fa fa-bars"></span></button>
+					<div class="head">
+						<a href="index.html"><h1>Potestas Canti</h1></a>
+						<button class="navbar-toggle">
+							<div></div>
+							<div></div>
+							<div></div>
+						</button>
+					</div>
 					<div class="dropdown">
 						<ul>
 							<a href="index.html">
@@ -57,7 +63,6 @@
 				<p>Odezwiemy się w najbliższym czasie!</p>
 			</main>
 		</div>
-		<script src="https://use.fontawesome.com/2ba0d7112c.js"></script>
 		<script src="code.js"></script>
 	</body>
 </html>
