--- a/src/video.html
+++ b/src/video.html
@@ -63,9 +63,16 @@
 				</div>
 				<h2>Nagrania naszych występów</h2>
 				<div class="main-iframe">
-					<span class="arrowBefore"></span>
-						<iframe width="100%" height="500px" src="https://www.youtube.com/embed/videoseries?list=PLWomASkCz34ZT2DZx8ugmqK2y1m8ZtcOR" frameborder="0" allowfullscreen></iframe>
-					<span class="arrowAfter"></span>
+					<a class="arrowBefore">❰</a>
+							<div class="movie"> 
+								<div id="mainPlayer" class="youtube-player" data-id="r1XbTk6FIIk" ></div>
+							</div> 
+						<div class="thumbnails">
+							<div class="youtube-player" data-id="JuuMPOhB34w" ></div>
+							<div class="youtube-player" data-id="q0jZn-oVP0U" ></div>
+							<div class="youtube-player" data-id="_tmKQn2vv0E" ></div>
+						</div>
+					<a class="arrowAfter">❱</a>
 
 				</div>
 
