--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 							<div></div>
 						</button>
 					</div>
-					<div class="dropdown activate">
+					<div class="dropdown">
 						<ul>
 							<a href="index.html">
 								<li>Home</li>
