Fixed navbar in index.html

--- a/src/video.html
+++ b/src/video.html
@@ -63,16 +63,16 @@
 				</div>
 				<h2>Nagrania naszych występów</h2>
 				<div class="main-iframe">
-					<a class="arrowBefore">❰</a>
+<!-- 					<a class="arrowBefore">❰</a> -->
 							<div class="movie"> 
 								<div id="mainPlayer" class="youtube-player" data-id="r1XbTk6FIIk" ></div>
 							</div> 
-						<div class="thumbnails">
+<!-- 						<div class="thumbnails">
 							<div class="youtube-player" data-id="JuuMPOhB34w" ></div>
 							<div class="youtube-player" data-id="q0jZn-oVP0U" ></div>
 							<div class="youtube-player" data-id="_tmKQn2vv0E" ></div>
 						</div>
-					<a class="arrowAfter">❱</a>
+					<a class="arrowAfter">❱</a> -->
 
 				</div>
 
