--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,7 @@
 				<h1>Potestas Canti</h1>
 				<h2>oprawa muzyczna mszy</h2>
 			</main>
+			<div id="moreContent"></div>
 		</div>
 		<script src="code.js"></script>
 	</body>
