On scroll change site

--- a/src/about.html
+++ b/src/about.html
@@ -63,7 +63,7 @@
 				</div>
 					<h2>O zespole</h2>
 					<p>
-						Zespół Potestas Canti składa się z trzech muzyków: wokalistki-gitarzystki, skrzypka oraz flecistki. 
+						Zespół Potestas Canti składa się z trzech muzyków: wokalistki-gitarzystki, skrzypaczki oraz flecistki. 
 					</p>
 					<p>
 						Wykonujemy muzykę sakralną podczas uroczystości kościelnych takich jak ślub, chrzest, pogrzeb.
